<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0f0f"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/horiz_padding_login"
        tools:ignore="UnusedAttribute">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bgWhite"
            app:boxBackgroundColor="@color/bgWhite"
            app:boxStrokeColor="@color/bgWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/bgWhite" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bgWhite"
            app:boxBackgroundColor="@color/bgWhite"
            app:boxStrokeColor="@color/bgWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username_edit_text"
                android:inputType="text"
                android:textColor="@color/bgWhite" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bgWhite"
            app:boxBackgroundColor="@color/bgWhite"
            app:boxStrokeColor="@color/bgWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/bgWhite" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_space_items"
            android:background="@drawable/edit_text_border"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textSize="@dimen/sign_in_size" />

    </LinearLayout>

</RelativeLayout>