<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin_space_items"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/client_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bgWhite"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                tools:text="@string/enter_username_edit_text" />


            <TextView
                android:id="@+id/date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_text_size"
                android:layout_alignParentRight="true"
                tools:text="@string/enter_due_date_hint" />


        </RelativeLayout>

        <TextView
            android:id="@+id/status_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bgWhite"
            android:textSize="@dimen/title_text_size"
            tools:text="@string/status_text" />

        <TextView
            android:id="@+id/last_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_content_height"
            android:layout_marginTop="@dimen/margin_space_items"
            android:textSize="@dimen/content_text_size"
            android:textColor="@color/text_color"
            tools:text="Your structure for note must contain title, content and date added." />


    </LinearLayout>



</LinearLayout>